# kap

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  mise.toml
.devcontainer/: .env.example  Dockerfile  Dockerfile.proxy  Dockerfile.release  devcontainer.json  devg.toml  devp.toml  docker-compose.devg.yml  docker-compose.yml  kap.toml  setup.sh  smoke-test.sh
.github/workflows/: checks.yml  release.yml
src/: check.rs  config.rs  connect_proxy.rs  container.rs  cred_server.rs  credential.rs  dev.rs  doctor.rs  init.rs  init_env.rs  keychain.rs  lib.rs  main.rs  mcp_cmd.rs  profiles.rs  reload.rs  status.rs  upgrade.rs
src/cli/: filter.rs  mod.rs  shim.rs
src/gh/: filter.rs  mod.rs
src/mcp/: auth.rs  client.rs  filter.rs  jsonrpc.rs  mod.rs  upstream.rs
src/proxy/: allowlist.rs  dns.rs  log.rs  mod.rs  sni.rs
src/remote/: agent.rs  api.rs  auth.rs  containers.rs  mod.rs  web.rs  ws.rs
static/: app.html
tests/: library_rules.rs
tests/integration/: run.sh  setup.sh  teardown.sh
