[package]
name = "devcontainer-egress-proxy"
version = "0.1.0"
edition = "2024"
description = "Egress proxy + credential isolation for devcontainers"
license = "MIT"

[[bin]]
name = "devp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
libc = "0.2"
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
