[package]
name = "kap"
version = "0.0.2"
edition = "2024"
description = "Run AI agents in secure capsules. Built on devcontainers with network controls and remote access."
license = "MIT"

[[bin]]
name = "kap"
path = "src/main.rs"

[lib]
name = "kap"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
fs2 = "0.4"
qrcode = { version = "0.14", default-features = false }
tokio-tungstenite = "0.26"
futures-util = "0.3"
libc = "0.2"
terminal_size = "0.4.3"
